<resources>
    <string name="app_name">OMG Wallet</string>

    <!-- Sign In -->
    <string name="sign_in_hint_email">Email</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_forget_password">Forgot Your Password?</string>
    <string name="sign_in_dont_have_account">Don\'t have an account? </string>
    <string name="sign_in_sign_up">Sign up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_button_loading">Loading…</string>
    <string name="sign_in_success">Sign in as %s successfully.</string>
    <string name="sign_in_fingerprint">Fingerprint</string>

    <!-- Splash -->
    <string name="splash_status_loading_wallet">Loading wallet…</string>
    <string name="splash_status_creating_transaction">Creating transaction…</string>
    <string name="splash_btn_close">Close</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Signup</string>
    <string name="sign_up_full_name">Full name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_re_type_password">Re-type password</string>
    <string name="sign_up_password_description">Password should included lower case letter [a–z], upper case letter [A–Z], numeric character [0-9] and special character [~`!@#+-].</string>
    <string name="sign_up_description">* By signing up, you agree to our term of use and privacy policy.</string>
    <string name="sign_up_button">Signup</string>
    <string name="sign_up_success">Register successfully. Please confirm your email.</string>

    <!-- Confirm Email -->
    <string name="confirm_email_title">Please confirm your email</string>
    <string name="confirm_email_description">We\'ve sent you an email. Please check and click the link in the email to verify identity.</string>
    <string name="confirm_email_button">Got it</string>

    <!-- Balance -->
    <string name="balance_title">Balance</string>
    <string name="balance_full_currency">%s</string>
    <string name="balance_abbr_currency">%s</string>
    <string name="balance_amount">%,.2f</string>
    <string name="balance_primary">primary</string>

    <!-- Balance Detail -->
    <string name="balance_detail_title">Token Detail</string>
    <string name="balance_detail_last_updated">Last updated\n%1$tB %1$te, %1$tY %1$tI:%1$tM %1$Tp</string>
    <string name="balance_detail_token_primary">Primary</string>
    <string name="balance_detail_token_set_primary">Set Primary</string>
    <string name="balance_detail_primary_token_set_notify">Set %s as a primary token</string>
    <string name="balance_detail_primary_token_help_text">* Primary token will be a default token to be used for receive or top-up.</string>

    <!-- Transaction List -->
    <string name="transaction_list_title">Transaction</string>
    <!-- e.g. Jenny K. [3856...092] -->
    <string name="transaction_list_info_name_id">%s</string>
    <string name="transaction_list_info_amount">%,.2f %s</string>
    <string name="transaction_list_info_date_time">%1$tb %1$te, %1$tI:%1$tM %1$Tp</string>
    <string name="transaction_list_info_success">Success</string>
    <string name="transaction_list_info_failure">Failure</string>
    <string name="transaction_list_topup_info">Receive top-up %,.2f %s from %s</string>
    <string name="transaction_list_pay_info">Pay %s %s to %s</string>
    <string name="transaction_list_empty_transaction">EMPTY TRANSACTION</string>

    <!-- Show QR -->
    <string name="show_qr_title">Your QR</string>
    <string name="show_qr_description">Show this QR to scan for paying or topup.</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_transaction">Transaction</string>
    <string name="profile_account">Account</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_sign_out">Sign out</string>

    <!-- Info -->
    <string name="profile_info">Build info</string>
    <string name="profile_info_endpoint">Endpoint</string>
    <string name="profile_info_version">Version</string>

    <!-- Permission -->
    <string name="camera_permission_explain">Camera access is needed to scan the QR code.</string>
    <string name="permission_setting">Settings</string>

    <!-- setting_help -->
    <string name="setting_help_title">Settings &amp; Help</string>
    <string name="setting_help_faq">FAQ</string>
    <string name="setting_help_term_of_use">Term of use</string>
    <string name="setting_help_privacy">Privacy</string>
    <string name="setting_help_fingerprint">Fingerprint</string>
    <string name="setting_help_fingerprint_not_supported">Your device does not support the fingerprint authentication.</string>
    <string name="setting_help_coming_soon">Coming soon…</string>
    <string name="setting_help_enter_password">Enter your password to confirm</string>
    <string name="setting_help_enable_finger_print_successfully">Enable fingerprint successfully.</string>
    <string name="setting_help_confirm">Confirm</string>

    <!-- Confirm Transaction Request-->
    <string name="confirm_transaction_request_title">Confirm Transaction Request</string>
    <string name="confirm_transaction_request_send">Send</string>
    <string name="confirm_transaction_request_amount">%s %s</string>
    <string name="confirm_transaction_request_to">To</string>
    <string name="confirm_transaction_request_approve">Approve</string>
    <string name="confirm_transaction_request_reject">Reject</string>
    <string name="confirm_transaction_request_error_not_has_enough_fund">Your current account does not have enough fund (%s %s)</string>

    <!-- Transaction Notification Message -->
    <string name="notification_transaction_approved_received">Successfully received %s %s from %s</string>
    <string name="notification_transaction_approved_sent">Successfully sent %s %s to %s</string>
    <string name="notification_transaction_rejected">Transaction request from %s has been rejected</string>

    <!-- Fingerprint -->
    <string name="dialog_fingerprint_title">Sign-in</string>
    <string name="dialog_fingerprint_subtitle">Sign-in to your account</string>
    <string name="dialog_fingerprint_description">In order to use the Fingerprint sensor we need your authorization first.</string>
    <string name="dialog_fingerprint_status_normal">Touch the fingerprint sensor</string>
    <string name="dialog_fingerprint_error_try_again">Try again</string>
    <string name="dialog_fingerprint_error_too_many_attempt">Too many attempt. Try again later.</string>
    <string name="dialog_fingerprint_error_too_fast">Finger moving too fast. Please try again.</string>
    <string name="dialog_fingerprint_error_too_slow">Finger moving too slow. Please try again.</string>
    <string name="dialog_fingerprint_error_unable_to_process">Unable to process</string>
    <string name="dialog_fingerprint_btn_cancel">Cancel</string>
    <string name="dialog_fingerprint_option_not_enabled">Please enable fingerprint option before use.</string>
    <string name="dialog_fingerprint_unsupported">Your device does not support the fingerprint authentication.</string>
    <string name="dialog_fingerprint_not_enrolled">You haven\'t enrolled the fingerprint on your device yet.</string>

    <!-- BottomBar Item -->
    <string name="bottom_navigation_item_balance">Balance</string>
    <string name="bottom_navigation_item_profile">Profile</string>
    <string name="bottom_navigation_item_qr">QR</string>

    <!-- Validator -->
    <string name="validator_signin_email_invalid_format">Email Address is invalid format</string>

    <string name="validator_signup_fullname_not_empty">Field should not be empty</string>
    <string name="validator_signup_password_at_least_8">Password must contain at least 8 characters</string>
    <string name="validator_signup_password_upper_case">Password must contain at least 1 upper case character</string>
    <string name="validator_signup_password_lower_case">Password must contain at least 1 lower case character</string>
    <string name="validator_signup_password_numeric">Password must contain at least 1 numeric character</string>
    <string name="validator_signup_password_special_char">Password must contain at least 1 special character</string>
    <string name="validator_signup_confirm_password_not_matched">Password is not matched</string>

    <!-- Error Description -->
    <string name="error_wallet_not_found">The wallet is not found for this user.</string>
    <string name="error_empty_token">There are no tokens available.</string>
</resources>
